[gd_scene load_steps=6 format=2]

[ext_resource path="res://rythm_game/rhythm_game_playarea.gd" type="Script" id=1]
[ext_resource path="res://songs/sands_of_time/T.Stebbins - Sands Of Time.ogg" type="AudioStream" id=2]
[ext_resource path="res://sounds/sfx/tmb3.wav" type="AudioStream" id=3]
[ext_resource path="res://graphics/ratings.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.1
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.048, 0.096 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 0.8, 0.8 ), Vector2( 0.75, 0.75 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugLabel" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
text = "esss"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="HitEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="RatingSprite" type="Sprite" parent="."]
position = Vector2( 200.418, 102.73 )
scale = Vector2( 0.75, 0.75 )
z_index = 4096
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 128, 195, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RatingSprite"]
anims/rating_appear = SubResource( 1 )
